--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@commitlint/cli": "^17.4.3",
+    "@commitlint/config-conventional": "^17.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -23,11 +25,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "husky":{
-     "hooks":{
-       "commit-msg":"commitlint -E HUSKY_GIT_PARAMS"
-     }
-  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -46,9 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@commitlint/cli": "^17.4.3",
-    "@commitlint/config-conventional": "^17.4.3",
-    "husky": "^8.0.3"
-  }
+  "devDependencies": {}
 }
